# Puissance-4

./: .cproject  .gitignore  .project  CMakeLists.txt  README
doc/: graphe_puissance4.odt  md_puissance4.odt
include/: Controler.hpp  IHM_console.hpp  IHM_sdl.hpp  controler.hpp  ia.h  interface_console.h  jeu_puissance_4.hpp  joueur.hpp  plateau.hpp
src/: Controler.cpp  controler.cpp  interface_console.cpp  main.cpp
test/: a.out  test.cxx  testIA.hpp  testJeuxPuiss4.hpp  testPlateau.hpp  unit_test.cpp
